[package]
name = "myrtio-mqtt"
description = "MQTT client library for embedded systems"
version = "0.2.0"
publish = true
license = "MIT"
edition = "2024"
rust-version = "1.90"

[features]
default = []
v5 = []
defmt = ["dep:defmt"]
log = ["dep:log"]
esp32-log = ["dep:esp-println"]

[dependencies]
log = { version = "0.4", optional = true }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
heapless = "0.9"
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
embassy-futures = "0.1.2"
embassy-net = { version = "0.7.1", features = [
    "tcp",
    "medium-ethernet",
    "proto-ipv4",
]}
futures = { version = "0.3.30", default-features = false }
defmt = { version = "0.3", optional = true }
esp-println = { version = "0.16.1", optional = true, default-features = false }
